crates/rimz/src/cli/sidebar/snapshots/rimz__cli__sidebar__tests__expanded_fixture_frame.snap
---
source: crates/rimz/src/cli/sidebar/tests.rs
expression: strip_sgr(&ansi)
---
  flightdeck                    /srv/code/flightdeck

  78                           68M  47M  13M 󱥸 6M
  13 (4)  2                                 $392.00
 ────────────────────────────────────────────────────
  2    1    2    1                      ⢿ 5    2

▎ pricing-refresh  #91 ┄┄┄┄┄┄┄┄┄┄┄┄┄ ⇡1  +1180 -430🮇
▌ codex · GPT 5.5 · xhigh · 272k               $4.82▐
▌  approve pricing cache write                       ▐
▌  󰕰 ━━━━━━━━━━━━━━━━━━━━━━━━╺─────────────────   58%▐
▌  󰿦 158k · 󱥸 151k  6k  19k                   󰪠 18m▐

  main                     ⇡3 ⇣1  +1840 -620   main
 ⢄ claude · Opus 4.8 · xhigh · 1m               $8.64
   stabilize render diff
   󰕰 ━━━━━━━━━━━━━━━━╺━╺───────────────────────   24%
   󰿦 247k · 󱥸 212k  24k  9k  30k
    subagents (2)
      Explore — audit auth watcher changes     $0.34
        22k · Haiku · xhigh
     ⠁ Plan — run focused nextest               $0.12
        18k · Haiku · xhigh                    󰪞  3m
 ▁ claude · Opus 4.8 · xhigh · 1m              $28.90
   compact provider trace
   󰕰 ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━╺━━━╺━────   79%
   󰿦 797k · 󱥸 685k  79k  31k  99k ·  3       󰪟 8m
 ⣾ cargo nextest               37%   402M     8M/s
   integration::backend

  observer-lag                 ⇡1  +980 -360   main
  claude · Opus 4.8 · xhigh · 1m              $29.84
   API Error: Overloaded
   󰕰 ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━╺━━━╺━───   85%
   󰿦 853k · 󱥸 734k  85k  34k  106k            ◉ 1h
 ⠁ opencode · GPT 5.5 · xhigh · 272k            $3.07
   trace tmux layout parity
   󰕰 ━━━━━━━━━━━━━━━━╺─────────────────────────   38%
   󰿦 103k · 󱥸 99k  4k  12k ·  1
  pi · GPT 5.5 · xhigh
 ⢄ codex · GPT 5.5 · xhigh · 272k               $3.83
   triage stale pane sample
   󰕰 ━━━━━━━━━━━━━━━━━━━━━━━━━━━╺━─────────────   68%
   󰿦 185k · 󱥸 178k  7k  23k                   󰪥 54m
    subagents (2)
      Explore — audit auth watcher changes
        22k · Haiku · xhigh
     ⠁ Plan — run focused nextest
        18k · Haiku · xhigh                    󰪞  3m
  claude · Opus 4.8 · xhigh

  zellij-health                        ⇡1  +760 -210
  pi · GPT 5.5 · xhigh · 272k                  $5.76
   API error
   󰕰 ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━╺━──────   84%
   󰿦 228k · 󱥸 219k  9k  28k                   󰪣 42m

  theme-tune  #91         ⇡2 ⇣1  +1320 -540   main
  opencode · GPT 5.5 · xhigh · 272k            $0.68
   pick gallery color ramp
   󰕰 ━━━━━━╺───────────────────────────────────   15%
   󰿦 42k · 󱥸 40k  1k  5k                       󰪥 1h
 ⢄ claude · Opus 4.8 · xhigh · 1m               $6.95
   verify 256-color fallback
   󰕰 ━━━━━━━━━━━━━━━━━━━╺━━╺───────────────────   31%
   󰿦 314k · 󱥸 270k  31k  12k  39k             󰪞 6m
    subagents (2)
      Explore — audit auth watcher changes     $0.34
        22k · Haiku · xhigh
     ⠁ Plan — run focused nextest               $0.12
        18k · Haiku · xhigh                    󰪞  3m

  mux-merge #91                                main
  claude · Opus 4.8 · xhigh · 1m              $15.38
   API Error: Overloaded
   󰕰 ━━━━━━━━━━━━━━━━━━━━━━━━╺━━╺━─────────────   46%
   󰿦 469k · 󱥸 403k  46k  18k  58k             ◉ 1h
  claude · Opus 4.8 · xhigh · 1m               $2.41
   land tmux hook fix
   󰕰 ━━━━━━━━━╺━╺──────────────────────────────   13%
   󰿦 132k · 󱥸 114k  13k  5k  16k              ◉ 2h

 ─── Claude ──── Codex ──── Pi ──── Open Code ───────

           ChatGPT Pro · v0.135.0           󰑐 2  ⇅ rc
  ▗▛▀▀▀▜▖   24   31M  21M  6M 󱥸 3M        $428.00
 ▐█ ▜▖  █▌ 5h  ▰▰▰▰▰▰▰▰▰▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱ 󰑐  2h00m
  ▝▀▀▀▀▀▘  7d  ▰▰▰▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱ 󰑐  4d21h

  ── Total: ─────────────────────────────────────────
  W:   269   255.1M  178.6M   51.0M 󱥸   $3,990.00
  M:  1075     1.0B  714.2M  204.1M 󱥸  $15,960.00

                      Alt+p sidebar/back · ? for help
